# dubins

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  example-000-001-poses.cpp  example-000-002-circles.cpp  example-001-001-tangent-line.cpp  example-001-001-tools.cpp  example-001-002-tangent-circle.cpp  example-002-001-path.cpp  example-003-001-vq.cpp
src/: CMakeLists.txt  dubins.hpp  dubinsArc.hpp  dubinsCircle.hpp  dubinsPath.hpp  dubinsPose.hpp  dubinsTangent.hpp  dubinsVQ.hpp
